# BBGProject

./: .clang-format  .config.json  .gitignore  .qmake.conf  .qmake.stash  BBGProject.pro  CMakeCache.txt.prev  CMakeLists.txt  README.MD  cp.py  moduleIncludes.pri
.github/workflows/: cmake-single-linux.yml  cmake-single-platform.yml
App/: App.pro  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  qmake_qmake_qm_files.qrc  res.qrc
App/ABCInclude/: BaseExport.h  CommonBase.h  FramWorkExtend.h  GlobalDef.h  IBaseExport.h  ResouceLoadCommon.h  TryUtil.h
App/EntryExtends/: BootstrapEntry.cpp  BootstrapEntry.h  MainConfig.cpp  MainConfig.h
App/ModuleConfig/: moduleIncludes.pri
App/ProConfig/: AppConfig.pri  ModuleConfig.pri
App/UiFrame/: CMakeLists.txt  UiFrame.pri
App/UiFrame/TitleBar/: CBtnOnlyIcon.cpp  CBtnOnlyIcon.h  CMakeLists.txt  MainTitleBar.cpp  MainTitleBar.h  MainTitleBar.ui  TitleBar.cpp  TitleBar.h  TitleBar.pri
App/res/dict/: Protocol.json  some.dic
App/res/img/: babuge_img.psd  bubuge_icon.psd
App/res/qss/: stylesheet.qss  theme_win.qss
Modules/: CMakeLists.txt  Modules.pro
Modules/BussinessModule/: BussinessModule.cpp  BussinessModule.h  BussinessModule.pro  BussinessModule_global.h  CMakeLists.txt
Modules/LoggerManager/: CMakeLists.txt  LoggerManager.cpp  LoggerManager.h  LoggerManager.pro  LoggerManager_global.h
Modules/ModulesManager/: CMakeLists.txt  ModulesManager.cpp  ModulesManager.h  ModulesManager.pro  ModulesManager_global.h
Modules/ResourceManagerModule/: CMakeLists.txt  ResourceManagerModule.cpp  ResourceManagerModule.h  ResourceManagerModule.pro  ResourceManagerModule_global.h
Modules/TryModule/: CMakeLists.txt  TryModule.cpp  TryModule.h  TryModule.pro  TryModule_global.h
Plugins/: CMakeLists.txt  Plugins.pro
Plugins/PluginsManager/: CMakeLists.txt  PluginSpace.h  PluginsManager.cpp  PluginsManager.h  PluginsManager.pro  PluginsManager_global.h  PluginsStatusCheck.cpp  PluginsStatusCheck.h
